--- a/portfolio.html
+++ b/portfolio.html
@@ -60,5 +60,17 @@
         </ul>
       </div>
     </nav>
+    <br>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9">
+          <h1>
+            Portfolio
+          </h1>
+          <hr class="solid">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
