added the correct background image. added some of the sub sections in the portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -61,7 +62,6 @@
       </div>
     </nav>
     <br>
-    <br>
     <div class="container">
       <div class="row">
         <div class="col-sm-9">
@@ -69,6 +69,33 @@
             Portfolio
           </h1>
           <hr class="solid">
+          <div class="container">
+            <div class="row">
+              <div class= "col-sm-6">
+                <p>
+                  350 x 350
+                </p>
+              </div>
+              <div class="col-sm-6">
+                <p>
+                  350 x 350
+                </p>
+              </div>
+            </div>
+            <br>
+            <div class="row">
+              <div class= "col-sm-6">
+                <p>
+                  350 x 350
+                </p>
+              </div>
+              <div class="col-sm-6">
+                <p>
+                  350 x 350
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
