--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -28,11 +31,11 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="assets/css/indexsheet.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Your Name</a>
+      <a class="navbar-brand" href="#">Daniel Martinez</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -45,7 +48,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto" >
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#"
               >Contact <span class="sr-only">(current)</span></a
@@ -60,5 +63,33 @@
         </ul>
       </div>
     </nav>
+    <br />
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9">
+          <h1>About Me</h1>
+          <hr class="solid" />
+            <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSmhryUAzspabHM9Ch9Mq0u9s77VvTPMh6GrQ&usqp=CAU"
+                  alt="working on a computer"
+                />
+                  <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Sapiente a veritatis nisi, ullam nam nihil incidunt laboriosam
+                  ex, nemo expedita voluptatibus ea, ad amet asperiores
+                  praesentium cumque eum illum aspernatur dolorem unde dicta
+                  minima autem. Velit omnis vero cumque sapiente deleniti
+                  dignissimos eius? Consequatur reiciendis repellat mollitia
+                  quos soluta nemo animi repudiandae error atque quaerat ratione
+                  nobis, commodi sit reprehenderit laboriosam, ducimus tenetur
+                  hic iusto sequi. Exercitationem alias tempora illo dolorum,
+                  neque ipsum quos ratione.
+                  </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
-  </html>  
+</html>
