--- a/index.html
+++ b/index.html
@@ -83,7 +83,20 @@
                   quos soluta nemo animi repudiandae error atque quaerat ratione
                   nobis, commodi sit reprehenderit laboriosam, ducimus tenetur
                   hic iusto sequi. Exercitationem alias tempora illo dolorum,
-                  neque ipsum quos ratione.
+                  neque ipsum quos ratione. 
+                  </p>
+                  <p class="p2">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Sapiente a veritatis nisi, ullam nam<br>
+                  nihil incidunt laboriosam
+                  ex, nemo expedita voluptatibus ea, ad amet asperiores
+                  praesentium cumque eum illum aspernatur dolorem unde dicta
+                  minima autem. Velit omnis vero cumque sapiente deleniti
+                  dignissimos eius? Consequatur reiciendis repellat mollitia
+                  quos soluta nemo animi repudiandae error atque quaerat ratione
+                  nobis, commodi sit reprehenderit laboriosam, ducimus tenetur
+                  hic iusto sequi. Exercitationem alias tempora illo dolorum,
+                  neque ipsum quos ratione. 
                   </p>
               </div>
             </div>
