started on contact.html. added the navbar and background image.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                   </p>
                   <p class="p2">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Sapiente a veritatis nisi, ullam nam<br>
-                  nihil incidunt laboriosam
+                  Sapiente a veritatis nisi, ullam nam<br>nihil incidunt laboriosam
                   ex, nemo expedita voluptatibus ea, ad amet asperiores
                   praesentium cumque eum illum aspernatur dolorem unde dicta
                   minima autem. Velit omnis vero cumque sapiente deleniti
