--- a/contact.html
+++ b/contact.html
@@ -63,5 +63,31 @@
         </ul>
       </div>
     </nav>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 style1">
+          <h1>
+            Contact
+          </h1>
+          <hr class="solid" />
+          <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Name</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Email</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+            </div>
+          </form>
+          <button type="button" class="btn btn-primary btn-lg">Large button</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
