--- a/contact.html
+++ b/contact.html
@@ -85,9 +85,12 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
             </div>
           </form>
-          <button type="button" class="btn btn-primary btn-lg">Large button</button>
+          <button type="button" class="btn btn-primary btn-lg">Submit</button>
         </div>
       </div>
     </div>
+    <footer>
+      
+    </footer>
   </body>
 </html>
