--- a/contact.html
+++ b/contact.html
@@ -63,26 +63,39 @@
         </ul>
       </div>
     </nav>
-    <br>
+    <br />
     <div class="container">
       <div class="row">
         <div class="col-sm-9 style1">
-          <h1>
-            Contact
-          </h1>
+          <h1>Contact</h1>
           <hr class="solid" />
           <form>
             <div class="form-group">
               <label for="exampleFormControlInput1">Name</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+              <input
+                type="email"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="Name"
+              />
             </div>
             <div class="form-group">
               <label for="exampleFormControlInput1">Email</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+              <input
+                type="email"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="Email"
+              />
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Message</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
+                placeholder="Message"
+              ></textarea>
             </div>
           </form>
           <button type="button" class="btn btn-primary btn-lg">Submit</button>
@@ -90,7 +103,7 @@
       </div>
     </div>
     <footer>
-      
+      © Copyright
     </footer>
   </body>
 </html>
