completed contact html. Just need to  complete links.

--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,12 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <div class="greenbar"></div>
     <footer>
-      © Copyright
+      <div>© Copyright</div>
     </footer>
   </body>
 </html>
