--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
         <div class="col-sm-9">
           <h1>About Me</h1>
           <hr class="solid" />
+          <div class="contianer1">
             <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSmhryUAzspabHM9Ch9Mq0u9s77VvTPMh6GrQ&usqp=CAU"
                   alt="working on a computer"
                 />
-                  <p>
+                <div class="text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Sapiente a veritatis nisi, ullam nam nihil incidunt laboriosam
                   ex, nemo expedita voluptatibus ea, ad amet asperiores
@@ -82,21 +83,13 @@
                   dignissimos eius? Consequatur reiciendis repellat mollitia
                   quos soluta nemo animi repudiandae error atque quaerat ratione
                   nobis, commodi sit reprehenderit laboriosam, ducimus tenetur
-                  hic iusto sequi. Exercitationem alias tempora illo dolorum,
-                  neque ipsum quos ratione. 
-                  </p>
-                  <p class="p2">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Sapiente a veritatis nisi, ullam nam<br>nihil incidunt laboriosam
-                  ex, nemo expedita voluptatibus ea, ad amet asperiores
-                  praesentium cumque eum illum aspernatur dolorem unde dicta
-                  minima autem. Velit omnis vero cumque sapiente deleniti
-                  dignissimos eius? Consequatur reiciendis repellat mollitia
+                  hic iusto sequi.Exercitationem alias tempora illo dolorum,
+                  neque ipsum quos ratione. Consequatur reiciendis repellat mollitia
                   quos soluta nemo animi repudiandae error atque quaerat ratione
                   nobis, commodi sit reprehenderit laboriosam, ducimus tenetur
-                  hic iusto sequi. Exercitationem alias tempora illo dolorum,
-                  neque ipsum quos ratione. 
-                  </p>
+                  hic.
+                </div>
+          </div>
               </div>
             </div>
           </div>
