--- a/index.html
+++ b/index.html
@@ -96,5 +96,9 @@
         </div>
       </div>
     </div>
+    <div class="greenbar"></div>
+    <footer>
+      <div>© Copyright</div>
+    </footer>
   </body>
 </html>
