added footer in portfolio.html. added the blank boxes and made it so they are now mobile responsive at multiple sizes. not exacct like the copy but close and looks decent

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,35 +69,17 @@
             Portfolio
           </h1>
           <hr class="solid">
-          <div class="container">
-            <div class="row">
-              <div class= "col-sm-6">
-                <p>
-                  350 x 350
-                </p>
-              </div>
-              <div class="col-sm-6">
-                <p>
-                  350 x 350
-                </p>
-              </div>
-            </div>
-            <br>
-            <div class="row">
-              <div class= "col-sm-6">
-                <p>
-                  350 x 350
-                </p>
-              </div>
-              <div class="col-sm-6">
-                <p>
-                  350 x 350
-                </p>
-              </div>
-            </div>
-          </div>
+          <img class="img1" src="https://via.placeholder.com/350x350" alt="placeholder">
+          <img src="https://via.placeholder.com/350x350" alt="placeholder">
+          <img class="img2" src="https://via.placeholder.com/350x350" alt="placeholder">
+          <img class="img2" src="https://via.placeholder.com/350x350" alt="placeholder">
+          <img class="img3" src="https://via.placeholder.com/350x350" alt="placeholder">
         </div>
       </div>
     </div>
+    <div class="greenbar"></div>
+    <footer>
+      <div>© Copyright</div>
+    </footer>
   </body>
 </html>
