added hyper links to navbar across all three pages. added personal mini bio in the index.html.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Daniel Martinez</a>
+      <a class="navbar-brand" href="index.html">Daniel Martinez</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -50,15 +50,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="contact.html"
               >Contact <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="portfolio.html">About</a>
           </li>
         </ul>
       </div>
@@ -71,26 +71,24 @@
           <hr class="solid" />
           <div class="contianer1">
             <img
-                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSmhryUAzspabHM9Ch9Mq0u9s77VvTPMh6GrQ&usqp=CAU"
-                  alt="working on a computer"
-                />
-                <div class="text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Sapiente a veritatis nisi, ullam nam nihil incidunt laboriosam
-                  ex, nemo expedita voluptatibus ea, ad amet asperiores
-                  praesentium cumque eum illum aspernatur dolorem unde dicta
-                  minima autem. Velit omnis vero cumque sapiente deleniti
-                  dignissimos eius? Consequatur reiciendis repellat mollitia
-                  quos soluta nemo animi repudiandae error atque quaerat ratione
-                  nobis, commodi sit reprehenderit laboriosam, ducimus tenetur
-                  hic iusto sequi.Exercitationem alias tempora illo dolorum,
-                  neque ipsum quos ratione. Consequatur reiciendis repellat mollitia
-                  quos soluta nemo animi repudiandae error atque quaerat ratione
-                  nobis, commodi sit reprehenderit laboriosam, ducimus tenetur
-                  hic.
-                </div>
-          </div>
-              </div>
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSmhryUAzspabHM9Ch9Mq0u9s77VvTPMh6GrQ&usqp=CAU"
+              alt="working on a computer"
+            />
+            <div class="text">
+              Hello, my name is Daniel Martinez. I am an aspiring full stack web
+              developer. I plan to achieve this goal by succeeding in this
+              current course, the Georgia Tech Coding Boot Camp. Before I
+              started the course I worked mostly everyday for two years after
+              high school. This took a toll on me as I did not enjoy the line of
+              work I was in and so I felt unhappy and not content for the
+              majority of the time. Now with this boot camp and coding in
+              general, I find the content interesting and intriguing. One
+              downside I have noticed to taking this course is the lack of time
+              I have for myself! Lately I've spent the majority of my days
+              coding, doing homework, or looking over the material we talked
+              about in class. I say it is a downside but in reality I know it is
+              worth in the end because I know that time spent is going towards
+              somewhere.
             </div>
           </div>
         </div>
