--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Daniel Martinez</a>
+      <a class="navbar-brand" href="index.html">Daniel Martinez</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -50,15 +50,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="contact.html"
               >Contact <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="index.html">About</a>
           </li>
         </ul>
       </div>
