--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,14 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -29,7 +35,7 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +52,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto" >
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="contact.html"
               >Contact <span class="sr-only">(current)</span></a
@@ -61,23 +67,36 @@
         </ul>
       </div>
     </nav>
-    <br>
+    <br />
     <div class="container">
       <div class="row">
         <div class="col-sm-9">
-          <h1>
-            Portfolio
-          </h1>
-          <hr class="solid">
-          <img class="img1" src="https://via.placeholder.com/350x350" alt="placeholder">
-          <img src="https://via.placeholder.com/350x350" alt="placeholder">
-          <img class="img2" src="https://via.placeholder.com/350x350" alt="placeholder">
-          <img class="img2" src="https://via.placeholder.com/350x350" alt="placeholder">
-          <img class="img3" src="https://via.placeholder.com/350x350" alt="placeholder">
+          <h1>Portfolio</h1>
+          <hr class="solid" />
+          <img
+            class="img1"
+            src="https://via.placeholder.com/350x350"
+            alt="placeholder"
+          />
+          <img src="https://via.placeholder.com/350x350" alt="placeholder" />
+          <img
+            class="img2"
+            src="https://via.placeholder.com/350x350"
+            alt="placeholder"
+          />
+          <img
+            class="img2"
+            src="https://via.placeholder.com/350x350"
+            alt="placeholder"
+          />
+          <img
+            class="img3"
+            src="https://via.placeholder.com/350x350"
+            alt="placeholder"
+          />
         </div>
       </div>
     </div>
-    <div class="greenbar"></div>
     <footer>
       <div>© Copyright</div>
     </footer>
