added a few semantic elements. same throughout the 3 html pages.

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <header class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="contact.html"
@@ -65,10 +65,10 @@
             <a class="nav-link" href="index.html">About</a>
           </li>
         </ul>
-      </div>
+      </header>
     </nav>
     <br />
-    <div class="container">
+    <main class="container">
       <div class="row">
         <div class="col-sm-9">
           <h1>Portfolio</h1>
@@ -96,7 +96,7 @@
           />
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <div>© Copyright</div>
     </footer>
