--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <header class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="contact.html"
@@ -61,7 +61,7 @@
             <a class="nav-link" href="portfolio.html">About</a>
           </li>
         </ul>
-      </div>
+      </header>
     </nav>
     <br />
     <div class="container">
