added links in main page

--- a/index.html
+++ b/index.html
@@ -84,12 +84,39 @@
               majority of the time. Now with this boot camp and coding in
               general, I find the content interesting and intriguing. One
               downside I have noticed to taking this course is the lack of time
-              I have for myself! Lately I've spent the majority of my days
+              I have for myself! Lately, I've spent the majority of my days
               coding, doing homework, or looking over the material we talked
-              about in class. I say it is a downside but in reality I know it is
+              about in class. I say it is a downside, but in reality I know it is
               worth in the end because I know that time spent is going towards
-              somewhere.
+              somewhere great.
             </div>
+            <br>
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h2>Quick Links:</h2>
+                     <ul>
+                        <li>
+                          <a href="https://github.com/xdanielmtz">Github</a>
+                        </li>
+                        <li>
+                          <a href="https://www.linkedin.com/in/daniel-martinez-2130b81b5/">LinkdIn</a>
+                        </li>
+                     </ul>
+                </div>
+                  <div class="col-sm-6">
+                    <h3>Contact Me:</h3>
+                    <ul>
+                      <li>
+                        (678)-650-4147
+                      </li>
+                      <li>
+                        xdanielmtz@gmail.com
+                      </li>
+                    </ul>
+                  </div>
+               </div>
+               </div>
           </div>
         </div>
       </div>
