updated portfolio page with 2 works

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
+    <div id="page-container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="index.html">Daniel Martinez</a>
       <button
@@ -73,32 +74,24 @@
         <div class="col-sm-9">
           <h1>Portfolio</h1>
           <hr class="solid" />
-          <img
-            class="img1"
-            src="https://via.placeholder.com/350x350"
-            alt="placeholder"
-          />
-          <img src="https://via.placeholder.com/350x350" alt="placeholder" />
-          <img
-            class="img2"
-            src="https://via.placeholder.com/350x350"
-            alt="placeholder"
-          />
-          <img
-            class="img2"
-            src="https://via.placeholder.com/350x350"
-            alt="placeholder"
-          />
-          <img
-            class="img3"
-            src="https://via.placeholder.com/350x350"
-            alt="placeholder"
-          />
+          <div class="text-center">
+              <h3>Safe Music Lovers</h3>
+               <p>Application:  <a href="https://xdanielmtz.github.io/Project-1/">https://xdanielmtz.github.io/Project-1/</a></p>
+               <p> Repo: <a href="https://github.com/xdanielmtz/Project-1">https://github.com/xdanielmtz/Project-1</a></p></p>
+               <img src="project-1.png" style="width: 800px; height: 500px;">
+               <br>
+               <br>
+               <h3>Password Generator</h3>
+               <p>Application:  <a href="https://xdanielmtz.github.io/password-generator/">https://xdanielmtz.github.io/password-generator/</a></p>
+               <p> Repo: <a href="https://github.com/xdanielmtz/password-generator">https://github.com/xdanielmtz/password-generator</a></p></p>
+               <img src="password-generator.png" style="width: 800px; height: 500px;">
+          </div>  
         </div>
       </div>
     </main>
-    <footer>
-      <div>© Copyright</div>
-    </footer>
+    <div id="footer">
+      © Copyright
+    </div>
+  </div>
   </body>
 </html>
