added pdf file in index.html

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                         <li>
                           <a href="https://www.linkedin.com/in/daniel-martinez-2130b81b5/">LinkdIn</a>
                         </li>
+                        <li>
+                          <a href="./Resume.pdf" target="blank">Resume</a>
+                        </li>
                      </ul>
                 </div>
                   <div class="col-sm-6">
