made screenshots mobile responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
               <h3>Safe Music Lovers</h3>
                <p>Application:  <a href="https://xdanielmtz.github.io/Project-1/">https://xdanielmtz.github.io/Project-1/</a></p>
                <p> Repo: <a href="https://github.com/xdanielmtz/Project-1">https://github.com/xdanielmtz/Project-1</a></p></p>
-               <img src="project-1.png" style="width: 800px; height: 500px;">
+               <img src="project-1.png" id="imageOne" style="width: 800px; height: 500px;">
                <br>
                <br>
                <h3>Password Generator</h3>
