updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,10 +81,10 @@
                <img src="project-1.png" id="imageOne" style="width: 800px; height: 500px;">
                <br>
                <br>
-               <h3>Password Generator</h3>
-               <p>Application:  <a href="https://xdanielmtz.github.io/password-generator/">https://xdanielmtz.github.io/password-generator/</a></p>
-               <p> Repo: <a href="https://github.com/xdanielmtz/password-generator">https://github.com/xdanielmtz/password-generator</a></p></p>
-               <img src="password-generator.png" style="width: 800px; height: 500px;">
+               <h3>Eat-Da-Burger !</h3>
+               <p>Application:  <a href="https://eat-da-burger-u.herokuapp.com/">https://eat-da-burger-u.herokuapp.com/</a></p>
+               <p> Repo: <a href="https://github.com/xdanielmtz/burger">https://github.com/xdanielmtz/burger</a></p></p>
+               <img src="eat-da-burger.png" style="width: 800px; height: 500px;">
           </div>  
         </div>
       </div>
