added another project for repo page

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,6 +85,11 @@
                <p>Application:  <a href="https://eat-da-burger-u.herokuapp.com/">https://eat-da-burger-u.herokuapp.com/</a></p>
                <p> Repo: <a href="https://github.com/xdanielmtz/burger">https://github.com/xdanielmtz/burger</a></p></p>
                <img src="eat-da-burger.png" style="width: 800px; height: 500px;">
+               <br>
+               <h3>Footbal or Futbol?</h3>
+               <p>Application:  <a href="https://football-or-futbol.herokuapp.com/">https://football-or-futbol.herokuapp.com/</a></p>
+               <p> Repo: <a href="https://github.com/xdanielmtz/football-or-futbol">https://github.com/xdanielmtz/football-or-futbol</a></p></p>
+               <img src="football-or-futbol-ss.png" style="width: 800px; height: 500px;">
           </div>  
         </div>
       </div>
